--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - dev
+      - feat-15-3Ds
   pull_request:
     branches:
       - main
@@ -47,3 +48,26 @@ jobs:
         with:
           files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}      
+
+          - name: mkdocs
+          run: |
+            cd ${{ github.workspace }}
+            pip install mkdocs
+            pip install mkdocstrings[python]
+            pip install mkdocs-material
+            mkdocs gh-deploy --clean
+          shell: bash  
+    
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install setuptools wheel twine
+    
+        - name: Build package
+          run: python setup.py sdist bdist_wheel
+    
+        - name: Upload to PyPI
+          env:
+            TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+            TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+          run: twine upload dist/*          
