--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main' }}
         uses: codecov/codecov-action@v2
         with:
-          files: ./coverage.xml
+          files: ./codecov.yml
           token: ${{ secrets.CODECOV_TOKEN }}      
 
           - name: mkdocs
