--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.10.11
 
@@ -43,31 +43,28 @@ jobs:
           coverage xml
 
       - name: Upload coverage to Codecov
-        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main' }}
+        if: ${{ matrix.os == 'ubuntu-22.04'}}
         uses: codecov/codecov-action@v2
         with:
           files: ./codecov.yml
           token: ${{ secrets.CODECOV_TOKEN }}      
 
-          - name: mkdocs
-          run: |
-            cd ${{ github.workspace }}
-            pip install mkdocs
-            pip install mkdocstrings[python]
-            pip install mkdocs-material
-            mkdocs gh-deploy --clean
-          shell: bash  
+      - name: mkdocs
+        run: |
+          cd ${{ github.workspace }}
+          pip install mkdocs
+          pip install mkdocstrings[python]
+          pip install mkdocs-material
+          mkdocs gh-deploy --clean
+        shell: bash  
+  
+      - name: Build package
+        run: |
+          pip install setuptools wheel twine
+          python setup.py sdist bdist_wheel
     
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install setuptools wheel twine
-    
-        - name: Build package
-          run: python setup.py sdist bdist_wheel
-    
-        - name: Upload to PyPI
-          env:
-            TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-            TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-          run: twine upload dist/*          
+      - name: Upload to PyPI
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: twine upload dist/*          
