--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: 3.10.11
 
@@ -59,7 +59,7 @@ jobs:
           pip install mkdocs
           pip install mkdocstrings[python]
           pip install mkdocs-material
-          mkdocs gh-deploy --clean     
+          mkdocs gh-deploy --clean  --force  
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}               
         shell: bash  
