--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,12 +64,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}               
         shell: bash  
       
-      # - name: deploy docs
-      #   if: ${{ matrix.os == 'ubuntu-22.04'}}
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: ./site
+      - name: deploy docs
+        if: ${{ matrix.os == 'ubuntu-22.04'}}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
   
       - name: Build package
         run: |
