--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,19 +20,22 @@ jobs:
           - ubuntu-22.04
           - windows-2022
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: 3.10.11
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ${{ github.workspace }}/requirements.txt     
+          pip install -r ${{ github.workspace }}/requirements.txt
 
       - name: Run unittest tests
         run: |
@@ -42,8 +45,39 @@ jobs:
           coverage xml
 
       - name: Upload coverage to Codecov
-        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main' }}
-        uses: codecov/codecov-action@v2
+        if: ${{ matrix.os == 'ubuntu-22.04'}}
+        uses: codecov/codecov-action@v5
         with:
           files: ./coverage.xml
-          token: ${{ secrets.CODECOV_TOKEN }}      
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Build and deploy docs
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
+        run: |
+          cd ${{ github.workspace }}
+          pip install mkdocs
+          pip install mkdocstrings[python]
+          pip install mkdocs-material
+          mkdocs build --site-dir site
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+
+      - name: Deploy docs to GitHub Pages
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
+          enable_jekyll: true
+
+      - name: Build package
+        run: |
+          pip install setuptools wheel twine
+          python setup.py sdist bdist_wheel
+
+      # - name: Upload to PyPI
+      #   env:
+      #     TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+      #     TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      #   run: twine upload dist/*
