--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,11 @@
-site_name: YunMengEnvs
+site_name: YunmengEnvs
 
 
 docs_dir: 'docs'
 nav:
   - Home: 
     - 'Introduction': README.md 
+    - 'Getting Started': getting_started.md 
 
 
 theme:
