--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
       matrix:
         os:
           - ubuntu-22.04
-          - windows-2022
 
     permissions:
       contents: write
@@ -39,16 +38,14 @@ jobs:
 
       - name: Run unittest tests
         run: |
+          export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
           pip install pytest pytest-cov
-          coverage run -m pytest
-          coverage report
-          coverage xml
+          pytest --cov-branch --cov-report=xml
 
       - name: Upload coverage to Codecov
         if: ${{ matrix.os == 'ubuntu-22.04'}}
         uses: codecov/codecov-action@v5
         with:
-          files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Build and deploy docs
