--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,16 +40,14 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
           pip install pytest pytest-cov
-          coverage run -m pytest
-          coverage report
-          coverage xml
+          pytest --cov .
 
       - name: Upload coverage to Codecov
         if: ${{ matrix.os == 'ubuntu-22.04'}}
-        uses: codecov/codecov-action@v2
-        with:
-            files: ./coverage.xml
-            token: ${{ secrets.CODECOV_TOKEN }} 
+        run: |
+          curl -linux https://cli.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
 
       - name: Build and deploy docs
         if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
