--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,12 +43,10 @@ jobs:
           pytest --cov .
 
       - name: Upload coverage to Codecov
-        if: ${{ matrix.os == 'ubuntu-22.04'}}
-        run: |
-          curl -linux https://cli.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
-
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          
       - name: Build and deploy docs
         if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
         run: |
