--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,14 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
           pip install pytest pytest-cov
-          pytest --cov-branch --cov-report=xml
+          coverage run -m pytest
+          coverage report
+          coverage xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
+          files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
           
       - name: Build and deploy docs
