--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,14 +40,16 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
           pip install pytest pytest-cov
-          pytest --cov-branch --cov-report=xml
+          coverage run -m pytest
+          coverage report
+          coverage xml
 
       - name: Upload coverage to Codecov
-        if: ${{ matrix.os == 'ubuntu-22.04'}}
         uses: codecov/codecov-action@v5
         with:
+          files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
-
+          
       - name: Build and deploy docs
         if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
         run: |
@@ -74,6 +76,7 @@ jobs:
           python setup.py sdist bdist_wheel
 
       # - name: Upload to PyPI
+      #   if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main'}}
       #   env:
       #     TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
       #     TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
