docs: 完善项目文档

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,20 @@ site_name: YunmengEnvs
 docs_dir: 'docs'
 nav:
   - Home: 
-    - 'Introduction': README.md 
-    - 'Getting Started': getting_started.md 
+    - '关于YunmengEnvs': README.md 
+    - '安装': Install.md 
+    - '快速开始': QuickStart.md 
+    - '解决方案': Solutions.md
+    - '集成': Integrate.md
+    - '求解器': Solvers.md
+    - '回调': Callbacks.md
+    - '可视化': Visualizers.md
+    - '基准': Benchmarks.md
+    - '开发者': Developer.md 
+  - More: 
+    - 'yunmeng.solutions': ./apis/solutions.md
+    - 'yunmeng.solvers': ./apis/solvers.md
+    - 'yunmeng.numerics': ./apis/numerics.md
 
 
 theme:
