--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,3 +43,36 @@ plugins:
             heading_level: 3  
             show_signature_annotations: true
             modernize_annotations: true  
+
+markdown_extensions:
+  - markdown.extensions.fenced_code
+  - pymdownx.highlight
+  - pymdownx.superfences
+  - pymdownx.inlinehilite
+  - pymdownx.tabbed
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:pymdownx.emoji.gemoji
+      emoji_generator: !!python/name:pymdownx.emoji.to_svg
+  - pymdownx.magiclink
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.progressbar
+  - pymdownx.saneheaders
+  - pymdownx.smartsymbols
+  - pymdownx.striphtml
+  - pymdownx.escapeall:
+      hardbreak: true
+      ampersand: true
+  - pymdownx.keypress
+  - pymdownx.snippets
+  - pymdownx.tabbed
+  - pymdownx.tilde
