--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Deploy docs to GitHub Pages
         if: ${{ matrix.os == 'ubuntu-22.04'}}
-        uses: peaceiris/deploy-pages@v4
+        uses: actions/deploy-pages@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
