--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,22 +42,22 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r ${{ github.workspace }}/requirements.txt
 
-      # - name: Run unittest tests
-      #   run: |
-      #     export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
-      #     pip install pytest pytest-cov
-      #     coverage run -m pytest
-      #     coverage report
-      #     coverage xml
+      - name: Run unittest tests
+        run: |
+          export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
+          pip install pytest pytest-cov
+          coverage run -m pytest
+          coverage report
+          coverage xml
 
-      # - name: Upload coverage to Codecov
-      #   uses: codecov/codecov-action@v5
-      #   with:
-      #     files: ./coverage.xml
-      #     token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
           
       - name: Build and deploy docs
-        if: ${{ matrix.os == 'ubuntu-22.04'}}
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
         run: |
           cd ${{ github.workspace }}
           pip install mkdocs
@@ -69,17 +69,17 @@ jobs:
         shell: bash
 
       - name: Set up pages
-        if: ${{ matrix.os == 'ubuntu-22.04'}}
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev' }}
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
-        if: ${{ matrix.os == 'ubuntu-22.04'}}
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev' }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: "./docs"
 
       - name: Deploy docs to GitHub Pages
-        if: ${{ matrix.os == 'ubuntu-22.04'}}
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev' }}
         id: deployment
         uses: actions/deploy-pages@v4
         with:
