--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,6 @@ jobs:
 
     permissions:
       contents: write
-      pages: write
-      id-token: write
-  
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Checkout repository
@@ -46,16 +40,14 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
           pip install pytest pytest-cov
-          coverage run -m pytest
-          coverage report
-          coverage xml
+          pytest --cov-branch --cov-report=xml
 
       - name: Upload coverage to Codecov
+        if: ${{ matrix.os == 'ubuntu-22.04'}}
         uses: codecov/codecov-action@v5
         with:
-          files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
-          
+
       - name: Build and deploy docs
         if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
         run: |
@@ -68,31 +60,22 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: bash
 
-      - name: Set up pages
-        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev' }}
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev' }}
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: "./docs"
-
       - name: Deploy docs to GitHub Pages
-        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev' }}
-        id: deployment
-        uses: actions/deploy-pages@v4
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
+          enable_jekyll: true
 
       - name: Build package
-        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main' }}
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main'}}
         run: |
           pip install setuptools wheel twine
           python setup.py sdist bdist_wheel
 
       # - name: Upload to PyPI
-      #   if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main' }}
+      #   if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main'}}
       #   env:
       #     TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
       #     TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
