--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,9 @@ jobs:
       contents: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: pyvista/setup-headless-display-action@v3
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.10.11
 
@@ -52,9 +50,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
         run: |
           cd ${{ github.workspace }}
-          pip install mkdocs
-          pip install mkdocstrings[python]
-          pip install mkdocs-material
+          pip install mkdocs mkdocstrings[python] mkdocs-material
           mkdocs build --site-dir site
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
