--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,9 @@ jobs:
       contents: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: pyvista/setup-headless-display-action@v3
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.10.11
 
@@ -40,21 +38,21 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:${{ github.workspace }}
           pip install pytest pytest-cov
-          pytest --cov-branch --cov-report=xml
+          coverage run -m pytest
+          coverage report
+          coverage xml
 
       - name: Upload coverage to Codecov
-        if: ${{ matrix.os == 'ubuntu-22.04'}}
         uses: codecov/codecov-action@v5
         with:
+          files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Build and deploy docs
         if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/dev'}}
         run: |
           cd ${{ github.workspace }}
-          pip install mkdocs
-          pip install mkdocstrings[python]
-          pip install mkdocs-material
+          pip install mkdocs mkdocstrings[python] mkdocs-material
           mkdocs build --site-dir site
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -69,11 +67,13 @@ jobs:
           enable_jekyll: true
 
       - name: Build package
+        if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main'}}
         run: |
           pip install setuptools wheel twine
           python setup.py sdist bdist_wheel
 
       # - name: Upload to PyPI
+      #   if: ${{ matrix.os == 'ubuntu-22.04' && github.ref == 'refs/heads/main'}}
       #   env:
       #     TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
       #     TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
