--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ docs_dir: 'docs'
 nav:
   - Home: 
     - '关于YunmengEnvs': README.md 
-    - '安装': Install.md 
-    - '快速开始': QuickStart.md 
+    - '开始安装': Install.md 
+    - '概览': QuickStart.md 
     - '解决方案': Solutions.md
     - '集成': Integrate.md
     - '求解器': Solvers.md
