docs: 更新算例配置文件格式说明

--- a/benchmarks/task_config_template.yml
+++ b/benchmarks/task_config_template.yml
@@ -1,5 +1,9 @@
 # ===============================================================================
-# 项目描述
+# 项目描述, 应当包括：
+# 项目简介、配置文件格式版本等。
+# 
+# 配置文件作为solution层的输入文件，同时负责solver层的配置。
+# solver 层的配置应该支持自有格式以及第三方格式（文件导入的方式，如openfoam等求解器）。
 # ===============================================================================
 TITLE: 1D Burgers Equation used for example.
   This demo test the basic IO functions.
