--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-imageio
-# jax==0.4.31
-matplotlib
-numba
-numpy
-pyvista
-PyYAML
-setuptools
-sympy
-vtk
+GPUtil==1.4.0
+imageio==2.36.0
+matplotlib==3.5.1
+numpy==1.23.0
+psutil==7.0.0
+pyvista==0.44.2
+setuptools==72.1.0
+sympy==1.13.2
+vtk==9.3.1
+py-spy==0.4.0
