--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,72 +1,68 @@
 site_name: YunmengEnvs
 
-
-docs_dir: 'docs'
+docs_dir: "docs"
 nav:
-  - Home: 
-    - '关于YunmengEnvs': README.md 
-    - '开始安装': Install.md 
-    - '概览': QuickStart.md 
-    - '解决方案': Solutions.md
-    - '集成': Integrate.md
-    - '求解器': Solvers.md
-    - '回调': Callbacks.md
-    - '可视化': Visualizers.md
-    - '基准': Benchmarks.md
-    - '开发者': Developer.md 
-  - More: 
-    - 'yunmeng.solutions': ./apis/solutions.md
-    - 'yunmeng.solvers': ./apis/solvers.md
-    - 'yunmeng.numerics': ./apis/numerics.md
-
+  - Home:
+      - "关于YunmengEnvs": README.md
+      - "开始安装": Install.md
+      - "概览": QuickStart.md
+      - "解决方案": Solutions.md
+      - "集成": Integrate.md
+      - "求解器": Solvers.md
+      - "回调": Callbacks.md
+      - "可视化": Visualizers.md
+      - "基准": Benchmarks.md
+      - "开发者": Developer.md
+  - More:
+      - "yunmeng.solutions": ./apis/solutions.md
+      - "yunmeng.solvers": ./apis/solvers.md
+      - "yunmeng.numerics": ./apis/numerics.md
 
 theme:
-  name: readthedocs
-  language: zh  
-  palette:  
+  name: material
+  language: zh
+  palette:
     primary: light blue
     accent: indigo
-  feature:
-    tabs: true  
-
+  features:
+    - navigation.instant
+    - navigation.tabs.sticky
 
 plugins:
-  - search   
+  - search
   - mkdocstrings:
       default_handler: python
       handlers:
         python:
           options:
-            show_source: false  
+            show_source: false
             inherited_members: true
             merge_init_into_class: true
-            heading_level: 3  
+            heading_level: 3
             show_signature_annotations: true
-            modernize_annotations: true  
+            modernize_annotations: true
 
 markdown_extensions:
-  - admonition 
-  - footnotes 
-  - meta 
-  - pymdownx.caret  
-  - pymdownx.tilde  
-  - pymdownx.critic  
-  - pymdownx.details 
-  - pymdownx.inlinehilite 
-  - pymdownx.mark 
-  - pymdownx.smartsymbols  
-  - pymdownx.superfences  
-  - codehilite:   
+  - admonition
+  - footnotes
+  - meta
+  - pymdownx.caret
+  - pymdownx.tilde
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.inlinehilite
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - codehilite:
       guess_lang: false
       linenums: true
-  - toc:  
+  - toc:
       permalink: true
-  - pymdownx.betterem:  
+  - pymdownx.betterem:
       smart_enable: all
-  - pymdownx.emoji:  
-      emoji_generator: !!python/name:pymdownx.emoji.to_svg
-  - pymdownx.magiclink  
-  - pymdownx.tasklist: 
+  - pymdownx.magiclink
+  - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.arithmatex:
       generic: true
